Fix: fixed spacing in game information and hid fullscreen button if the mode is not supported by the browser

--- a/src/components/Tictactoe/Game/Templates/DesktopGame/DesktopGame.css
+++ b/src/components/Tictactoe/Game/Templates/DesktopGame/DesktopGame.css
@@ -7,7 +7,6 @@
 
 /* Game layout container with two columns */
 .t3-layout--2-cols {
-    /*margin: 0.625rem;*/ /* 10px */
     flex-direction: row;
     gap: 0.625rem; /* 10px = 0.625rem. Space between columns */
 }
@@ -39,6 +38,11 @@
 /* The horizontal menus on the LEFT (stopwatch, game controls) */
 .t3-layout__left .horiz-controls {
     border-radius: 0.375rem; /* 6px = 0.375rem */
+}
+
+/** GAME INFO **/
+.t3-layout__game-info  {
+    padding: 0.625rem; /* 0.625rem = 10px */
 }
 
 /* GAME STATUS */
@@ -74,14 +78,6 @@
     overflow: hidden;
 }
 
-/** STANDARD 2-COLUMNS **/
-@media (min-height: 481px) or (min-width: 769px) {
-    /** GAME INFO **/
-    .t3-layout__game-info  {
-        padding: 0.625rem; /* 0.625rem = 10px */
-    }
-}
-
 /** COMPACT 2-COLUMNS. Layout for smaller screens with compact elements due to limited space. **/
 @media (max-height: 480px) or (max-width: 768px) {
     /** LEFT PART **/
@@ -90,11 +86,6 @@
     .t3-layout__left .horiz-controls,
     .t3-layout__left .horiz-controls .row-cont {
         gap: 0.625rem; /* 10px = 0.625rem */
-    }
-
-    /** GAME INFO **/
-    .t3-layout__game-info  {
-        padding: 0.625rem; /* 10px = 0.625rem */
     }
 
     /** GAME STOPWATCH **/
@@ -152,7 +143,7 @@
     }
 
     .t3-layout__right-moves .btn-nav {
-        height: 1.25rem; /* 1.25rem = 20px */
-        font-size: 1.125rem; /* 1.125rem = 18px */
+        height: 1.5625rem; /* 1.5625rem = 25px */
+        font-size: 1.25rem; /* 1.25rem = 20px */
     }
 }
